--- a/Web/Lab1/Portfolio/photos.html
+++ b/Web/Lab1/Portfolio/photos.html
@@ -10,58 +10,54 @@
     <title>Photo album</title>
 </head>
 <body>
-    <div class="sidebar wrapper">
-        <header><h1>Contents</h1></header>
-        <ul>
-            <a href="#section1" class="contents">Фотоальбом</a>
-            <a href="#footer" class="contents">Footer</a>
+    <nav>
+        <ul class="nav-container">
+            <li class="nav-item"><span                   >Web lab1</span></li>
+            <li class="nav-item"><a href="index.html"    >Home</a></li>
+            <li class="nav-item"><a href="about.html"    >About</a></li>
+            <li class="nav-item"><a href="interests.html">My interests</a></li>
+            <li class="nav-item"><a href="learning.html" >Learning</a></li>
+            <li class="nav-item"><a href="photos.html"   >Photos</a></li>
+            <li class="nav-item"><a href="contact.html"  >Contact</a></li>
+            <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
-    </div>
-    <div class="main-content-container">
-        <nav id="nav" class="container wrapper">
-            <span id="site-title">Web lab1</span>
-            <a href="index.html"     class="nav-link">Home</a>
-            <a href="about.html"     class="nav-link">About</a>
-            <a href="interests.html" class="nav-link">My interests</a>
-            <a href="learning.html"  class="nav-link">Learning</a>
-            <a href="photos.html"    class="nav-link">Photos</a>
-            <a href="contact.html"   class="nav-link">Contact</a>
-            <a href="test.html"      class="nav-link">Test</a>
-        </nav>
-        <div class="container wrapper">
-            <header><h1>Фотоальбом</h1></header>
+    </nav>
+    <img src="images/portrait.jpg" class="portrait">
+    <div class="main-content">
+        <header><h1>Фотоальбом</h1></header>
 
-            <table class="photoalbum">
-                <tr>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                </tr>
-                <tr>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                </tr>
-                <tr>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                </tr>
-                <tr>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                    <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                </tr>
-            </table>
-        </div>
-        <footer id="footer" class="container wrapper">
+        <table class="photoalbum">
+            <tr>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+            </tr>
+            <tr>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+            </tr>
+            <tr>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+            </tr>
+            <tr>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+            </tr>
+        </table>
+    </div>
+    <footer>
+        <section>
             <header><h1>Footer</h1></header>
             <p>Some useful links here.</p>
-        </footer>
-    </div>
+        </section>
+    </footer>
 </body>
 </html>
