--- a/Web/Lab1/Portfolio/index.html
+++ b/Web/Lab1/Portfolio/index.html
@@ -10,73 +10,80 @@
     <title>Homepage</title>
 </head>
 <body>
-    <div class="sidebar wrapper">
-        <header><h1>Contents</h1></header>
-        <ul>
-            <a href="#section1" class="contents">Раздел 1</a>
-            <a href="#footer" class="contents">Footer</a>
+    <nav>
+        <ul class="nav-container">
+            <li class="nav-item"><span                   >Web lab1</span></li>
+            <li class="nav-item"><a href="index.html"    >Home</a></li>
+            <li class="nav-item"><a href="about.html"    >About</a></li>
+            <li class="nav-item"><a href="interests.html">My interests</a></li>
+            <li class="nav-item"><a href="learning.html" >Learning</a></li>
+            <li class="nav-item"><a href="photos.html"   >Photos</a></li>
+            <li class="nav-item"><a href="contact.html"  >Contact</a></li>
+            <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
+    </nav>
+    <img src="images/portrait.jpg" class="portrait">
+    <div class="main-content">
+        <header><h1>Портфолио</h1></header>
+        <section>
+            <img class="avatar" src="images/avatar.jpg" alt="author's avatar" title="that's me!">
+            <header><h2>Обо мне</h2></header>
+            <p>
+                <i>Горбенко Кирилл Николаевич.</i> Группа ИС-17-2-о. Исследование возможностей
+                языка разметки гипертекстов HTML и каскадных таблиц стилей CSS. 
+                <strong>Вариант № 3</strong>.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
+                volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
+                fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+                semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
+                vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+                libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
+                sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
+                Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
+                faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+                condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
+            </p>
+        </section>
+        <section>
+            <header><h2>Следующая глава</h2></header>
+
+            <p>
+                Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
+                tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
+                Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
+                conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
+                Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
+                consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
+                sapien, nec cursus nisi. Curabitur vehicula augue quam.
+            </p>
+        </section>
     </div>
-    <div class="main-content-container">
-        <nav id="nav" class="container wrapper">
-            <span id="site-title">Web lab1</span>
-            <a href="index.html"     class="nav-link">Home</a>
-            <a href="about.html"     class="nav-link">About</a>
-            <a href="interests.html" class="nav-link">My interests</a>
-            <a href="learning.html"  class="nav-link">Learning</a>
-            <a href="photos.html"    class="nav-link">Photos</a>
-            <a href="contact.html"   class="nav-link">Contact</a>
-            <a href="test.html"      class="nav-link">Test</a>
-        </nav>
-        <div class="container wrapper">
-            <header>
-                <h1>Портфолио Горбенко Кирилла Николаевича. Главная страница</h1>
-            </header>
-
-            <section id="section1">
-
-                <img id="avatar" src="images/avatar.jpg" alt="author's avatar" title="that's me!">
-            
-                <p>
-                    <i>Горбенко Кирилл Николаевич.</i> Группа ИС-17-2-о. Исследование возможностей
-                    языка разметки гипертекстов HTML и каскадных таблиц стилей CSS. 
-                    <strong>Вариант № 3</strong>.
-                </p>
-
-                <header><h2>Раздел 1</h2></header>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                    dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
-                    volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
-                    fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
-                    semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
-                    vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
-                    libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
-                    sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
-                    Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
-                    faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
-                    condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
-                </p>
-                <p>
-                    Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
-                    tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
-                    sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
-                    tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
-                    vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
-                    tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
-                    Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
-                    conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
-                    Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
-                    consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
-                    sapien, nec cursus nisi. Curabitur vehicula augue quam.
-                </p>
-            </section>
-        </div>
-        <footer id="footer" class="container wrapper">
-            <header><h1>Footer</h1></header>
-            <p>Some useful links here.</p>
-        </footer>
-    </div>
+    <footer>
+        <section>
+            <header><h2>Футер</h2></header>
+            <p>Some useful links here</p>
+            <ul>
+                <li>Link</li>
+                <li>Another link</li>
+            </ul>
+            <p>
+                And some info as well: Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. 
+            </p>
+        </section>
+    </footer>
 </body>
 </html>
