--- a/Web/Lab1/Portfolio/learning.html
+++ b/Web/Lab1/Portfolio/learning.html
@@ -10,28 +10,22 @@
     <title>Learning</title>
 </head>
 <body>
-    <div class="sidebar wrapper">
-        <header><h1>Contents</h1></header>
-        <ul>
-            <a href="#section1" class="contents">Дисциплины</a>
-            <a href="#footer" class="contents">Footer</a>
+    <nav>
+        <ul class="nav-container">
+            <li class="nav-item"><span                   >Web lab1</span></li>
+            <li class="nav-item"><a href="index.html"    >Home</a></li>
+            <li class="nav-item"><a href="about.html"    >About</a></li>
+            <li class="nav-item"><a href="interests.html">My interests</a></li>
+            <li class="nav-item"><a href="learning.html" >Learning</a></li>
+            <li class="nav-item"><a href="photos.html"   >Photos</a></li>
+            <li class="nav-item"><a href="contact.html"  >Contact</a></li>
+            <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
-    </div>
-    <div class="main-content-container">
-        <nav id="nav" class="container wrapper">
-            <span id="site-title">Web lab1</span>
-            <a href="index.html"     class="nav-link">Home</a>
-            <a href="about.html"     class="nav-link">About</a>
-            <a href="interests.html" class="nav-link">My interests</a>
-            <a href="learning.html"  class="nav-link">Learning</a>
-            <a href="photos.html"    class="nav-link">Photos</a>
-            <a href="contact.html"   class="nav-link">Contact</a>
-            <a href="test.html"      class="nav-link">Test</a>
-        </nav>
-        <div class="container wrapper">
-            <section id="section1">
-                <header><h1>Дисциплины</h1></header>
-            </section>
+    </nav>
+    <img src="images/portrait.jpg" class="portrait">
+    <div class="main-content">
+        <section>
+            <header><h1>Дисциплины</h1></header>
             <p>Институт информационных технологий и управления в технических системах</p>
             <p>Кафедра информационных систем</p>
 
@@ -81,11 +75,13 @@
                     <td class="td">ОС</td>
                 </tr>
             </table>
-        </div>
-        <footer id="footer" class="container wrapper">
+        </section>
+    </div>
+    <footer>
+        <section>
             <header><h1>Footer</h1></header>
             <p>Еще ссылочки.</p>
-        </footer>
-    </div>
+        </section>
+    </footer>
 </body>
 </html>
