--- a/Web/Lab1/Portfolio/interests.html
+++ b/Web/Lab1/Portfolio/interests.html
@@ -25,9 +25,17 @@
     <img src="images/portrait.jpg" class="portrait">
     <div class="main-content">
         <header><h1>Мои интересы</h1></header>
-
+        <section>
+            <header><h2>Contents</h1></header>
+            <ul>
+                <a class="contents" href="#hobby">Мое хобби.</a>
+                <a class="contents" href="#books">Мои книги.</a>
+                <a class="contents" href="#music">Моя музыка.</a>
+                <a class="contents" href="#movies">Мои фильмы.</a>
+            </ul>
+        </section>
         <section id="hobby">
-            <header><h1>Мое хобби:</h1></header>
+            <header><h2>Мое хобби:</h1></header>
             <p>Тут должны быть мои хобби</p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
@@ -156,8 +164,20 @@
     </div>
     <footer>
         <section>
-            <header><h1>Footer</h1></header>
-            <p>Еще ссылочки.</p>
+            <header><h2>Футер</h2></header>
+            <p>Some useful links here</p>
+            <ul>
+                <li>Link</li>
+                <li>Another link</li>
+            </ul>
+            <p>
+                And some info as well: Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. 
+            </p>
         </section>
     </footer>
 </body>
