--- a/Web/Lab1/Portfolio/photos.html
+++ b/Web/Lab1/Portfolio/photos.html
@@ -26,37 +26,41 @@
     <div class="main-content">
         <header><h1>Фотоальбом</h1></header>
 
-        <table class="photoalbum">
-            <tr>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-            </tr>
-            <tr>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-            </tr>
-            <tr>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-            </tr>
-            <tr>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-                <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-            </tr>
-        </table>
+        <div class="photo-wrapper">
+            <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/images.jpeg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/lion-king.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/road.jpeg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/car.png" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/bridge.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/green.jpeg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/statue.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/cock.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/city.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/fire.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/rose.jpeg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/photo.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/castrle.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/shimpanze.jpg" alt="funny picachu" title="Picachu!"></td>
+            <td><img src="images/salt.jpg" alt="funny picachu" title="Picachu!"></td>
+        </div>
     </div>
     <footer>
         <section>
-            <header><h1>Footer</h1></header>
-            <p>Some useful links here.</p>
+            <header><h2>Футер</h2></header>
+            <p>Some useful links here</p>
+            <ul>
+                <li>Link</li>
+                <li>Another link</li>
+            </ul>
+            <p>
+                And some info as well: Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. 
+            </p>
         </section>
     </footer>
 </body>
