--- a/Web/Lab1/Portfolio/test.html
+++ b/Web/Lab1/Portfolio/test.html
@@ -35,7 +35,7 @@
                         <label>От чего зависит величина стрелок размерной линии?</label>
                         <label class="inline">От длины размерной линии</label>
                         <input type="radio" id="1" value="1">
-                        <label class="inline">От толщины линии контура изображения</label>
+                        <label class="inline">От толщины линии  контура изображения</label>
                         <input type="radio" id="2" value="2">
                         <label class="inline">От масштаба изображения</label>
                         <input type="radio" id="3" value="3">
@@ -53,6 +53,16 @@
                         <label>Какие размеры являются рабочими? </label>
                         <textarea name="question3" id="field5" class="field-long field-textarea"></textarea>
                     </li>
+                    <li><label>Full Name</label><input type="text" name="field1" class="field-divided" placeholder="First" />
+                        <input type="text" name="field2" class="field-divided" placeholder="Last" /></li>
+                    <li>
+                        <label>Email</label>
+                        <input type="email" name="field3" class="field-long" />
+                    </li>
+                    <li>
+                        <label>Your Message</label>
+                        <textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+                    </li>
                     <li>
                         <input type="submit" value="Submit" />
                     </li>
@@ -62,8 +72,20 @@
     </div>
     <footer>
         <section>
-            <header><h1>Footer</h1></header>
-            <p>Some useful links here.</p>
+            <header><h2>Футер</h2></header>
+            <p>Some useful links here</p>
+            <ul>
+                <li>Link</li>
+                <li>Another link</li>
+            </ul>
+            <p>
+                And some info as well: Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. 
+            </p>
         </section>
     </footer>
 </body>
