--- a/Web/Lab1/Portfolio/about.html
+++ b/Web/Lab1/Portfolio/about.html
@@ -54,8 +54,20 @@
     </div>
     <footer>
         <section>
-            <header><h1>Footer</h1></header>
-            <p>Еще ссылочки.</p>
+            <header><h2>Футер</h2></header>
+            <p>Some useful links here</p>
+            <ul>
+                <li>Link</li>
+                <li>Another link</li>
+            </ul>
+            <p>
+                And some info as well: Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
+                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
+                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
+                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
+                vestibulum malesuada. 
+            </p>
         </section>
     </footer>
 </body>
