Minor changes and fixes

--- a/Web/Lab1/Portfolio/photos.html
+++ b/Web/Lab1/Portfolio/photos.html
@@ -27,22 +27,22 @@
         <header><h1>Фотоальбом</h1></header>
 
         <div class="photo-wrapper">
-            <td><img src="images/picachu.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/images.jpeg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/lion-king.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/road.jpeg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/car.png" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/bridge.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/green.jpeg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/statue.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/cock.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/city.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/fire.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/rose.jpeg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/photo.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/castrle.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/shimpanze.jpg" alt="funny picachu" title="Picachu!"></td>
-            <td><img src="images/salt.jpg" alt="funny picachu" title="Picachu!"></td>
+            <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/images.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="images/lion-king.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/road.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="images/car.png" alt="funny picachu" title="Picachu!">
+            <img src="images/bridge.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/green.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="images/statue.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/cock.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/city.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/fire.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/rose.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="images/photo.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/castrle.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/shimpanze.jpg" alt="funny picachu" title="Picachu!">
+            <img src="images/salt.jpg" alt="funny picachu" title="Picachu!">
         </div>
     </div>
     <footer>
