--- a/Web/Lab1/Portfolio/test.html
+++ b/Web/Lab1/Portfolio/test.html
@@ -30,17 +30,13 @@
             </header>
 
             <form method="POST" action="someaction">
-                <ul class="form-container">
+                <ol class="form-container">
                     <li>
                         <label>От чего зависит величина стрелок размерной линии?</label>
                         <label class="inline">От длины размерной линии</label>
                         <input type="radio" id="1" value="1" name="question1">
                         <label class="inline">От толщины линии  контура изображения</label>
                         <input type="radio" id="2" value="2" name="question1">
-                        <label class="inline">От масштаба изображения</label>
-                        <input type="radio" id="3" value="3" name="question1">
-                        <label class="inline">От размера формата</label>
-                        <input type="radio" id="4" value="4" name="question1">
                     <li>
                         <label>Какое назначение имеет тонкая сплошная линия?</label>
                         <select name="question2">
@@ -66,7 +62,7 @@
                     <li>
                         <input type="submit" value="Submit" />
                     </li>
-                </ul>
+                </ol>
             </form>
         </section>
     </div>
