Update views to match new routing rules

--- a/Web/Portfolio/src/html/photos.html
+++ b/Web/Portfolio/src/html/photos.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <link href="css/nav.css" rel="stylesheet" type="text/css" />
-    <link href="css/shared.css" rel="stylesheet" type="text/css" />
-    <link href="css/photos.css" rel="stylesheet" type="text/css" />
+    <link href="../css/nav.css" rel="stylesheet" type="text/css" />
+    <link href="../css/shared.css" rel="stylesheet" type="text/css" />
+    <link href="../css/photos.css" rel="stylesheet" type="text/css" />
     <title>Photo album</title>
 </head>
 <body>
@@ -22,27 +22,27 @@
             <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
     </nav>
-    <img src="images/portrait.jpg" class="portrait">
+    <img src="../images/portrait.jpg" class="portrait">
     <div class="main-content">
         <header><h1>Фотоальбом</h1></header>
 
         <div class="photo-wrapper">
-            <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/images.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="images/lion-king.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/road.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="images/car.png" alt="funny picachu" title="Picachu!">
-            <img src="images/bridge.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/green.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="images/statue.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/cock.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/city.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/fire.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/rose.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="images/photo.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/castrle.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/shimpanze.jpg" alt="funny picachu" title="Picachu!">
-            <img src="images/salt.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/images.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="../images/lion-king.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/road.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="../images/car.png" alt="funny picachu" title="Picachu!">
+            <img src="../images/bridge.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/green.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="../images/statue.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/cock.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/city.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/fire.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/rose.jpeg" alt="funny picachu" title="Picachu!">
+            <img src="../images/photo.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/castrle.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/shimpanze.jpg" alt="funny picachu" title="Picachu!">
+            <img src="../images/salt.jpg" alt="funny picachu" title="Picachu!">
         </div>
     </div>
     <footer>
