--- a/Web/Portfolio/src/html/about.html
+++ b/Web/Portfolio/src/html/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <link href="css/nav.css" rel="stylesheet" type="text/css" />
-    <link href="css/shared.css" rel="stylesheet" type="text/css" />
-    <link href="css/about.css" rel="stylesheet" type="text/css" />
+    <link href="../css/nav.css" rel="stylesheet" type="text/css" />
+    <link href="../css/shared.css" rel="stylesheet" type="text/css" />
+    <link href="../css/about.css" rel="stylesheet" type="text/css" />
     <title>About</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
     </nav>
-    <img src="images/portrait.jpg" class="portrait">
+    <img src="../images/portrait.jpg" class="portrait">
     <div class="main-content">
         <header><h1>Автобиография</h1></header>
 
@@ -43,12 +43,12 @@
             <p>Вот еще фоточки:</p>
 
             <div class="photo-wrapper">
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
             </div>
         </section>
     </div>
