--- a/Web/Portfolio/src/html/index.html
+++ b/Web/Portfolio/src/html/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <link href="css/nav.css" rel="stylesheet" type="text/css" />
-    <link href="css/shared.css" rel="stylesheet" type="text/css" />
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="../css/nav.css" rel="stylesheet" type="text/css" />
+    <link href="../css/shared.css" rel="stylesheet" type="text/css" />
+    <link href="../css/index.css" rel="stylesheet" type="text/css" />
     <title>Homepage</title>
 </head>
 <body>
@@ -22,11 +22,11 @@
             <li class="nav-item"><a href="test.html"     >Test</a></li>
         </ul>
     </nav>
-    <img src="images/portrait.jpg" class="portrait">
+    <img src="../images/portrait.jpg" class="portrait">
     <div class="main-content">
         <header><h1>Портфолио</h1></header>
         <section>
-            <img class="avatar" src="images/avatar.jpg" alt="author's avatar" title="that's me!">
+            <img class="avatar" src="../images/avatar.jpg" alt="author's avatar" title="that's me!">
             <header><h2>Обо мне</h2></header>
             <p>
                 <i>Горбенко Кирилл Николаевич.</i> Группа ИС-17-2-о. Исследование возможностей
