--- a/Web/Portfolio/src/html/interests.html
+++ b/Web/Portfolio/src/html/interests.html
@@ -6,7 +6,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../css/nav.css" rel="stylesheet" type="text/css" />
     <link href="../css/shared.css" rel="stylesheet" type="text/css" />
-    <link href="../css/interests.css" rel="stylesheet" type="text/css" />
     <title>Interests</title>
 </head>
 <body>
@@ -28,138 +27,11 @@
         <section>
             <header><h2>Contents</h1></header>
             <ul>
-                <a class="contents" href="#hobby">Мое хобби.</a>
-                <a class="contents" href="#books">Мои книги.</a>
-                <a class="contents" href="#music">Моя музыка.</a>
-                <a class="contents" href="#movies">Мои фильмы.</a>
+                <li><span class="contents" id="Hobbies">Мои хобби.</span></li>
+                <li><span class="contents" id="Books">Мои книги.</span></li>
+                <li><span class="contents" id="Music">Моя музыка.</span></li>
+                <li><span class="contents" id="Films">Мои фильмы.</span></li>
             </ul>
-        </section>
-        <section id="hobby">
-            <header><h2>Мое хобби:</h1></header>
-            <p>Тут должны быть мои хобби</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
-                volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
-                fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
-                semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
-                vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
-                libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
-                sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
-                Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
-                faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
-                condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
-            </p>
-            <p>
-                Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
-                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
-                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
-                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
-                vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
-                tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
-                Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
-                conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
-                Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
-                consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
-                sapien, nec cursus nisi. Curabitur vehicula augue quam.
-            </p>
-        </section>
-
-        <section id="books">
-            <header><h1>Мои любимые книги:</h1></header>
-            <p>Тут должны быть мои любимые книги</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
-                volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
-                fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
-                semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
-                vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
-                libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
-                sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
-                Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
-                faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
-                condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
-            </p>
-            <p>
-                Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
-                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
-                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
-                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
-                vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
-                tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
-                Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
-                conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
-                Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
-                consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
-                sapien, nec cursus nisi. Curabitur vehicula augue quam.
-            </p>
-        </section>
-
-        <section id="music">
-            <header><h1>Моя любимая музыка</h1></header>
-            <p>Тут должны быть мои любимые исполнители</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
-                volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
-                fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
-                semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
-                vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
-                libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
-                sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
-                Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
-                faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
-                condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
-            </p>
-            <p>
-                Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
-                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
-                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
-                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
-                vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
-                tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
-                Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
-                conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
-                Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
-                consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
-                sapien, nec cursus nisi. Curabitur vehicula augue quam.
-            </p>
-        </section>
-
-        <section id="movies">
-            <header><h1>Мои любимые фильмы</h1></header>
-            <p>Тут должны быть мои любимые фильмы</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
-                volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
-                fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
-                semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
-                vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
-                libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
-                sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
-                Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
-                faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
-                condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
-            </p>
-            <p>
-                Nunc eget viverra neque, non ullamcorper odio. Integer dolor sem, ultrices eu
-                tempus dapibus, sagittis ac lacus. Duis rutrum turpis eu lectus imperdiet, ac
-                sagittis orci faucibus. Vestibulum volutpat fringilla turpis vehicula lobortis.
-                Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam posuere 
-                tempor enim, et tempus tellus commodo mattis. Sed sollicitudin mauris vitae 
-                vestibulum malesuada. Morbi turpis neque, tristique a dolor eget, hendrerit 
-                tristique augue. Aenean leo erat, pretium at ante et, pretium ornare nibh. 
-                Aenean non nisl augue. Class aptent taciti sociosqu ad litora torquent per 
-                conubia nostra, per inceptos himenaeos. Donec feugiat id tellus a pharetra. 
-                Suspendisse consectetur tincidunt ex, quis tincidunt metus semper ut. Integer 
-                consectetur consectetur turpis, eget mollis nulla dapibus vitae. Sed sed imperdiet 
-                sapien, nec cursus nisi. Curabitur vehicula augue quam.
-            </p>
         </section>
     </div>
     <footer>
@@ -180,5 +52,6 @@
             </p>
         </section>
     </footer>
+    <script src="../js/interests.js"></script>
 </body>
 </html>
