Migrate photos page to a new format

--- a/Web/Portfolio/src/html/photos.html
+++ b/Web/Portfolio/src/html/photos.html
@@ -26,24 +26,7 @@
     <div class="main-content">
         <header><h1>Фотоальбом</h1></header>
 
-        <div class="photo-wrapper">
-            <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/images.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="../images/lion-king.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/road.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="../images/car.png" alt="funny picachu" title="Picachu!">
-            <img src="../images/bridge.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/green.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="../images/statue.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/cock.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/city.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/fire.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/rose.jpeg" alt="funny picachu" title="Picachu!">
-            <img src="../images/photo.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/castrle.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/shimpanze.jpg" alt="funny picachu" title="Picachu!">
-            <img src="../images/salt.jpg" alt="funny picachu" title="Picachu!">
-        </div>
+        <div class="photo-wrapper"></div>
     </div>
     <footer>
         <section>
@@ -63,5 +46,6 @@
             </p>
         </section>
     </footer>
+    <script src="../js/photos.js"></script>
 </body>
 </html>
