Implement first version of form validation

--- a/Web/Portfolio/src/html/contact.html
+++ b/Web/Portfolio/src/html/contact.html
@@ -6,7 +6,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../css/nav.css" rel="stylesheet" type="text/css" />
     <link href="../css/shared.css" rel="stylesheet" type="text/css" />
-    <link href="../css/contact.css" rel="stylesheet" type="text/css" />
     <title>Contact page</title>
 </head>
 <body>
@@ -66,5 +65,6 @@
             </p>
         </section>
     </footer>
+    <script src="../js/forms.js"></script>
 </body>
 </html>
