Implement forms emptyness validation

--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -34,7 +34,7 @@
                     <li>
                         <label>От чего зависит величина стрелок размерной линии?</label>
                         <label class="inline">От длины размерной линии</label>
-                        <input type="radio" id="1" value="1" name="question1">
+                        <input type="radio" id="1" value="1" checked="true" name="question1">
                         <label class="inline">От толщины линии  контура изображения</label>
                         <input type="radio" id="2" value="2" name="question1">
                     <li>
@@ -84,5 +84,6 @@
             </p>
         </section>
     </footer>
+    <script src="../js/forms.js"></script>
 </body>
 </html>
