Fix test page title

--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -7,7 +7,7 @@
     <link href="../css/nav.css" rel="stylesheet" type="text/css" />
     <link href="../css/shared.css" rel="stylesheet" type="text/css" />
     <link href="../css/index.css" rel="stylesheet" type="text/css" />
-    <title>Homepage</title>
+    <title>Test page</title>
 </head>
 <body>
     <nav>
